--- a/index.html
+++ b/index.html
@@ -26,49 +26,71 @@
       </div>
     </header>
     <section class="row">
-        <div class="row__three-grid">
-          <div class="center-text">
-            <i class="large material-icons" id="me">access_time</i>
-          </div>
-          <div class="center-text">
-            <h1 class="header-text">Fast responce times</h1>
-          </div>
-          <div class="center-text">
-              <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sit ad non voluptatem, ratione quia sequi. Mollitia pariatur ea minus non ipsam deserunt veritatis, voluptatum quisquam minima dignissimos distinctio doloremque?</p>
-          </div>
-          <div class="center-text">
+      <div class="row__inner-div">
+        <div class="row__inner-div2">
+          <div class="row__three-grid">
+            <div class="center-text">
+              <i class="large material-icons" id="me">access_time</i>
+            </div>
+            <div class="center-text">
+              <h1 class="header-text">Fast responce times</h1>
+            </div>
+            <div class="center-text">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+                sit ad non voluptatem, ratione quia sequi. Mollitia pariatur ea
+                minus non ipsam deserunt veritatis, voluptatum quisquam minima
+                dignissimos distinctio doloremque?
+              </p>
+            </div>
+            <div class="center-text">
               <a href="#" class="btn">About</a>
+            </div>
           </div>
         </div>
-        <div class="row__three-grid">
-          <div class="center-text">
-            <i class="large material-icons" id="me">backup</i>
-          </div>
-          <div class="center-text">
-            <h1 class="header-text">Fast upload times</h1>
-          </div>
-          <div class="center-text">
-              <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consectetur dignissimos qui molestias libero cum at. Voluptatem corrupti eaque perspiciatis fugiat asperiores tenetur excepturi, earum sapiente harum nostrum ex suscipit.</p>
-          </div>
-          <div class="center-text">
+        <div class="row__inner-div2">
+          <div class="row__three-grid">
+            <div class="center-text">
+              <i class="large material-icons" id="me">backup</i>
+            </div>
+            <div class="center-text">
+              <h1 class="header-text">Fast upload times</h1>
+            </div>
+            <div class="center-text">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reiciendis consectetur dignissimos qui molestias libero cum at.
+                Voluptatem corrupti eaque perspiciatis fugiat asperiores tenetur
+                excepturi, 
+              </p>
+            </div>
+            <div class="center-text">
               <a href="#" class="btn">About</a>
+            </div>
           </div>
         </div>
-        <div class="row__three-grid">
-          <div class="center-text">
-            <i class="large material-icons" id="me">call</i>
-          </div>
-          <div class="center-text">
-            <h1 class="header-text">lightning fast customer support</h1>
-          </div>
-          <div class="center-text">
-              <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quidem sapiente laudantium reiciendis nihil quae hic expedita. Iste facere ab culpa doloribus similique, eligendi quod reiciendis commodi quidem aut ipsa.</p>
-          </div>
-          <div class="center-text">
+        <div class="row__inner-div2">
+          <div class="row__three-grid">
+            <div class="center-text">
+              <i class="large material-icons" id="me">call</i>
+            </div>
+            <div class="center-text">
+              <h1 class="header-text">lightning fast customer support</h1>
+            </div>
+            <div class="center-text">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Eligendi quidem sapiente laudantium reiciendis nihil quae hic
+                expedita. Iste facere ab culpa doloribus similique, eligendi
+                quod reiciendis commodi quidem aut ipsa.
+              </p>
+            </div>
+            <div class="center-text">
               <a href="#" class="btn">About</a>
+            </div>
           </div>
-  
         </div>
-      </section>
+      </div>
+    </section>
   </body>
 </html>
