--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <header class="header">
       <div class="header__textbox">
-        <h1 class="textbox__header">ream big</h1>
+        <h1 class="textbox__header">Dream big</h1>
         <h3 class="textbox__header-secondary">and never stop chasing</h3>
         <a href="#" class="btn">learn more &darr;</a>
       </div>
