--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       type="text/css"
       href="fontawesome-free-5.15.1-web/css/all.css"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
   </head>
   <body>
     <div class="nav">
