--- a/index.html
+++ b/index.html
@@ -102,6 +102,45 @@
         </div>
       </div>
     </section>
+    <section class="EmailForm-ContactUs">
+      <div class="EmailForm">
+        <div class="container">
+          <h2 class="EmailForm__header">Get email updates</h2>
+          <p class="EmailForm__paragraph">Stay tuned for more updates.</p>
+          <form action="" class="EmailForm__EmailSubmit">
+            <div class="first-last">
+              <input
+                type="text"
+                class="FName textbox"
+                id="FirstName"
+                placeholder="First Name"
+              />
+              <input
+                type="text"
+                class="LName textbox"
+                id="LastName"
+                placeholder="Last Name"
+              />
+            </div>
+            <div class="email">
+              <!-- <label for="email" id="email-label">email:</label> -->
+              <input
+                type="email"
+                class="EmailSubmit textbox"
+                id="email"
+                placeholder="Email"
+              />
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="ContactUs">
+
+      </div>
+
+    </section>
+    
+
     <script src="scripts.js"></script>
   </body>
 </html>
